--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "sass": "^1.77.4",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -27,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.3",
