--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "sass": "^1.77.4",
     "slick-carousel": "^1.8.1",
