feat: redesign colors

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sass": "^1.77.4",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
