--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.30.2",
     "react-use": "^17.5.1",
     "sass": "^1.77.4",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
