--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-swipeable": "^7.0.1",
     "react-use": "^17.5.1",
     "sass": "^1.77.4",
     "sharp": "^0.33.5",
