--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -20,6 +21,7 @@
     "husky": "^9.0.11",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-intl": "^3.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
