--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '22.x'  # Убедись, что здесь версия Node.js совпадает с версией, которую ты используешь
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '22.x'  # Убедись, что здесь версия Node.js совпадает с версией, которую ты используешь
+#
+#      - name: Install dependencies
+#        run: npm install
+#
+#      - name: Build project
+#        run: npm run build
       #      - name: Debug Secrets
       #        run: |
       #          echo "Host: ${{ secrets.SERVER_HOST }}"
