--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
             git pull origin main
             npm install
             npm run build
-            pm2 restart ecosystem.config.js
+            npx pm2 restart ecosystem.config.js
