--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,17 @@ jobs:
       #          echo "Host: ${{ secrets.SERVER_HOST }}"
       #          echo "User: ${{ secrets.SERVER_USER }}"
       #          # Do not print the password or key for security reasons.
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '22.x'  # Убедись, что здесь версия Node.js совпадает с версией, которую ты используешь
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: '22.x'  # Убедись, что здесь версия Node.js совпадает с версией, которую ты используешь
+      - name: Install nvm
+        run: |
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
+          echo "source ~/.nvm/nvm.sh" >> $GITHUB_ENV
+          source ~/.nvm/nvm.sh
+          nvm install 22  # Replace with your desired Node.js version
+          nvm use 22
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
