--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,8 +35,9 @@ jobs:
       - name: Install nvm
         run: |
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
-          echo "source ~/.nvm/nvm.sh" >> $GITHUB_ENV
-          source ~/.nvm/nvm.sh
+          # Load nvm
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           nvm install 22  # Replace with your desired Node.js version
           nvm use 22
       - name: Deploy to server
