feat: change ids

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_ENDPOINT=http://localhost:7777
+NEXT_PUBLIC_API_ENDPOINT=https://api.nsbeauty.kz/
+NEXT_PUBLIC_YANDEX_METRICA_ID=98204484
